--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
     <p>Making a web page interactive</p>
+    <button id="myButton">Press Me</button>
     <script src="app.js"></script>
   </body>
 </html>
