--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
     <p>Making a web page interactive</p>
-    <button id="myButton">Press Me</button>
+    <input type="text" id="myTextInput">
+    <button id="myButton">Change Header Color</button>
+    <hr>
+    <p>Purple Fruits</p>
+    <ul>
+      <li>grapes</li>
+      <li class='error-not-purple'>oranges</li>
+      <li>amethyst</li>
+      <li>lavender</li>
+        <li class='error-not-purple'>apples</li>
+      <li>plums</li>
+    </ul>
     <script src="app.js"></script>
   </body>
 </html>
